# citybound

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  aliases.js  appveyor.yml  build.rs  docker-compose.yml  imgui.ini  index.html  package-lock.json  package.json  rustfmt.toml  search-index.js
cb_browser_ui/: Cargo.toml  copyWasm.js  index.html  main.less  package-lock.json  package.json  tsconfig.json
cb_browser_ui/src/: citybound.js  citybound.tsx  colors.js  lib.rs  menu.js  menu.tsx  renderOrder.js  settings.js  toolbar.js  uiModes.tsx  uuid.js
cb_browser_ui/src/browser_utils/: Utils.js  Utils.ts  kay_auto.rs  mod.rs
cb_browser_ui/src/camera/: Camera.js
cb_browser_ui/src/debug/: Debug.js  kay_auto.rs  mod.rs
cb_browser_ui/src/households_browser/: Households.js  kay_auto.rs  mod.rs
cb_browser_ui/src/land_use_browser/: LandUse.js  kay_auto.rs  mod.rs  propMeshes.js
cb_browser_ui/src/planning_browser/: ControlPointInteractable.js  ControlPoints.tsx  GestureCanvas.js  GestureCanvas.tsx  Planning.js  Planning.tsx  PlanningMenu.js  PlanningMenu.tsx  ZonePlanningLayers.tsx  kay_auto.rs  mod.rs  stripedShaders.ts
cb_browser_ui/src/planning_browser/transport_planning/: ChangeNLanesInteractable.tsx  InsertControlPointInteractable.tsx  RoadInteractables.tsx  RoadPlanningLayers.tsx  SplitControlPointInteractable.tsx
cb_browser_ui/src/stage/: Stage.js
cb_browser_ui/src/time_browser/: Time.js  kay_auto.rs  mod.rs
cb_browser_ui/src/transport_browser/: Transport.js  kay_auto.rs  mod.rs
cb_browser_ui/src/vegetation_browser/: Vegetation.js  kay_auto.rs  mod.rs
cb_planning/: Cargo.toml
cb_planning/src/: lib.rs
cb_planning/src/construction/: compact_workaround.rs  kay_auto.rs  mod.rs
cb_planning/src/plan_manager/: compact_workaround.rs  kay_auto.rs  mod.rs
cb_planning/src/plan_manager/interaction/: kay_auto.rs  mod.rs
cb_planning/src/plan_manager/ui/: kay_auto.rs  mod.rs
cb_simulation/: Cargo.toml  llvm-lines-before.txt  llvm-lines-mid.txt  llvm-lines.txt
cb_simulation/src/: lib.rs
cb_simulation/src/construction/: compact_workaround.rs  kay_auto.rs  mod.rs
cb_simulation/src/economy/: mod.rs  resources.rs
cb_simulation/src/economy/households/: kay_auto.rs  mod.rs
cb_simulation/src/economy/market/: kay_auto.rs  mod.rs
cb_simulation/src/environment/: mod.rs
cb_simulation/src/land_use/: mod.rs
cb_simulation/src/log/: kay_auto.rs  mod.rs
cb_simulation/src/planning/: compact_workaround.rs  kay_auto.rs  mod.rs
cb_simulation/src/time/: kay_auto.rs  mod.rs  units.rs
cb_simulation/src/transport/: mod.rs
cb_simulation/src/util/: mod.rs
cb_util/: Cargo.toml
cb_util/src/: async_counter.rs  lib.rs  random.rs
cb_util/src/config_manager/: kay_auto.rs  mod.rs
cb_util/src/log/: kay_auto.rs
engine/compact/: Cargo.toml
engine/compact/src/: compact.rs  compact_dict.rs  compact_hash_map.rs  compact_option.rs  compact_str.rs  compact_vec.rs  lib.rs  pointer_to_maybe_compact.rs
engine/descartes/: Cargo.toml  README.md
engine/descartes/src/: angles.rs  areas.rs  band.rs  bbox.rs  clipper.rs  closed_line_path.rs  convert_2d_3d.rs  curved_path.rs  curves.rs  intersect.rs  lib.rs  line_path.rs  path.rs  primitives.rs  rough_eq.rs  shapes.rs
engine/kay/: Cargo.toml  README.md
engine/kay/src/: actor_system.rs  external.rs  id.rs  inbox.rs  lib.rs  messaging.rs  networking.rs  slot_map.rs  swarm.rs  type_registry.rs
engine/monet/: Cargo.toml
engine/monet/src/: build.rs  geometry.rs  lib.rs  mesh.rs  render_context.rs  scene.rs  thing.rs
engine/monet_new_draft/: Cargo.toml
engine/monet_new_draft/src/: lib.rs
engine/stagemaster/: Cargo.toml
engine/stagemaster/src/: build.rs  camera_control.rs  combo.rs  debug.rs  environment.rs  geometry.rs  lib.rs
game_browser/: Cargo.toml  Web.toml  cityboundClient.js  colors.js  copyWasm.js  index.html  main.css  main.less  package-lock.json  package.json
game_browser/src/: citybound.js  colors.js  lib.rs  menu.js  renderOrder.js  settings.js  toolbar.js
game_browser/src/browser_ui/: mod.rs
game_browser/src/camera/: Camera.js
game_browser/src/debug/: Debug.js  mod.rs
game_browser/src/households_browser/: Households.js  mod.rs
game_browser/src/land_use_browser/: LandUse.js  mod.rs
game_browser/src/planning_browser/: Planning.js  mod.rs
game_browser/src/simulation_browser/: Simulation.js  mod.rs
game_browser/src/stage/: Stage.js
game_browser/src/transport_browser/: Transport.js  carMesh.js  mod.rs
game_browser/src/view/: View.js
game_common/: Cargo.toml
game_common/engine/browser_monet/: Cargo.toml
game_common/engine/browser_stagemaster/: Cargo.toml
game_common/engine/dummy_monet/: Cargo.toml  README.md
game_common/engine/dummy_stagemaster/: Cargo.toml
game_common/engine/monet/: Cargo.toml
game_common/engine/stagemaster/: Cargo.toml
game_common/src/: README.md  dimensions.rs  lib.rs
game_common/src/browser_ui/: mod.rs
game_common/src/construction/: mod.rs
game_common/src/economy/: mod.rs  resources.rs
game_common/src/governance/: README.md
game_common/src/land_use/: mod.rs
game_common/src/planning/: mod.rs
game_common/src/render_layers/: mod.rs
game_common/src/simulation/: mod.rs  time.rs
game_common/src/style/: colors.rs  mod.rs
game_common/src/time/: units.rs
game_common/src/transport/: mod.rs
game_common/src/ui_layers/: mod.rs
game_common/src/util/: async_counter.rs  disjoint_sets.rs  grid_accelerator.rs  init.rs  mod.rs  random.rs
lib/kay/: Cargo.toml
lib/kay/src/: actor_system.rs  allocators.rs  chunked.rs  compact.rs  compact_dict.rs  compact_vec.rs  external.rs  id.rs  inbox.rs  lib.rs  messaging.rs  pointer_to_maybe_compact.rs  slot_map.rs  swarm.rs  type_registry.rs
lib/monet/: Cargo.toml  build.rs
lib/monet/src/: geometry.rs  lib.rs  render_context.rs  scene.rs  sdf.rs  thing.rs
lib/stagemaster/: Cargo.toml
lib/stagemaster/src/: camera_control.rs  combo.rs  environment.rs  geometry.rs  lib.rs
lib/weaver/: Cargo.toml  build.rs
lib/weaver/src/: lib.rs  mod_trait.rs  package.rs  weaver.rs
(+913 files in other folders)
