[package]
name = "citybound"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
license = "AGPL-3.0"

[workspace]
members = [
    "./game_common"
]
exclude = [
    "./game_browser"
]

[[bin]]
name = "citybound"
path = "./game_server/main.rs"

[dependencies]
rouille = "2.1.0"
clap = "2.32.0"
rust-embed-flag = {git = "https://github.com/aeickhoff/rust-embed"}

[dependencies.citybound_common]
path = "./game_common"

[profile.dev]
opt-level = 1
codegen-units = 4

[profile.release]
debug = true
codegen-units = 4

[features]
embed_assets = ["rust-embed-flag/embed_assets"]