[package]
name = "citybound"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
license = "AGPL-3.0"

[workspace]
members = [
    "./cb_simulation"
]
exclude = [
    "./cb_browser_ui"
]

[[bin]]
name = "citybound"
path = "./cb_server/main.rs"

[dependencies]
rouille = "2.1.0"
clap = "2.32.0"
open = "1.2.2"
backtrace = "0.3"
rust-embed-flag = {git = "https://github.com/aeickhoff/rust-embed"}

[dependencies.cb_simulation]
path = "./cb_simulation"

[profile.dev]
opt-level = 1
codegen-units = 8

[profile.release]
debug = true
codegen-units = 8
lto = true

[features]
embed_assets = ["rust-embed-flag/embed_assets"]