[package]
name = "citybound"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
license = "AGPL-3.0"

[workspace]
members = [
    "./cb_simulation",
    "./cb_planning",
    "./cb_util",
    "./cb_time",
]
exclude = [
    "./cb_browser_ui"
]

[[bin]]
name = "citybound"
path = "./cb_server/main.rs"

[dependencies]
rouille = {version = "2.1.0", default-features = false}
clap = "2.32.0"
backtrace = "0.3"
rust-embed-flag = {git = "https://github.com/aeickhoff/rust-embed"}
ctrlc = "3.1.3"

[dependencies.cb_simulation]
path = "./cb_simulation"

[profile.dev]
opt-level = 1
codegen-units = 4

[profile.release]
debug = true
codegen-units = 4

[features]
embed_assets = ["rust-embed-flag/embed_assets"]