[package]
name = "cb_browser_ui"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
license = "AGPL-3.0"
build = "./build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
stdweb = "0.4.9"
serde = "1.0"
serde_derive = "1.0"
compact_macros = "0.1.0"
kay = {version = "0.4.1", default-features = false, features = ["browser"]}

[dependencies.cb_simulation]
path = "../cb_simulation"
default-features = false

[build-dependencies]
kay_codegen = {version = "0.3.5", features = ["serde-serialization"]}

[profile.release]
debug = true