[package]
name = "cb_planning"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
license = "AGPL-3.0"
build = "./build.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.7.1", features = ["v4", "serde"] }
compact = { version = "0.2.13", features = ["serde-serialization"] }
compact_macros = "0.1.0"
kay = {version = "0.4.10", default-features = false, features = ["serde-serialization"] }
descartes = {version = "0.1.19", features = ["compact_containers", "serde-serialization"]}
cb_util = {path = "../cb_util"}
cb_time = {path = "../cb_time"}

[build-dependencies]
kay_codegen = {version = "0.3.10", features = ["serde-serialization"]}