[package]
name = "cb_simulation"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
license = "AGPL-3.0"
build = "./build.rs"

[dependencies]
ordered-float = "1.0.1"
itertools = "0.7.8"
rand = { version = "0.5", features = ["stdweb"] }
# waiting for image dep to be optional on crates
noise = { git = "https://github.com/Razaekel/noise-rs", rev="4606a00", default-features = false }
fnv = "1.0.6"
roaring = "0.5.2"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.7.1", features = ["v4", "serde"] }
compact = { version = "0.2.15", features = ["serde-serialization"] }
compact_macros = "0.1.0"
kay = {version = "0.5.0", default-features = false, features = ["serde-serialization"] }
descartes = {version = "0.1.19", features = ["compact_containers", "serde-serialization"]}
michelangelo = {version = "0.2.5"}
arrayvec = {version = "0.4.10", features = ["serde-1"]}
cb_util = {path = "../cb_util"}
cb_time = {path = "../cb_time"}
cb_planning = {path = "../cb_planning"}

[build-dependencies]
kay_codegen = {version = "0.3.10", features = ["serde-serialization"]}

[features]
default = ["server"]
server = ["kay/server"]
browser = ["kay/browser"]