[package]
name = "citybound_browser"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
stdweb = "0.4.7"
kay = {version = "0.2.11", default-features = false, features = ["browser"]}

[dependencies.citybound_common]
path = "../game_common"
default-features = false
features = ["browser"]