[package]
name = "citybound_common"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
license = "AGPL-3.0"
build = "./build.rs"

[dependencies]
ordered-float = "0.5.0"
itertools = "0.7.6"
rand = "0.3"
fnv = "1.0.5"
roaring = "0.5.2"
open = "1.2.1"
serde = "1.0"
serde_derive = "1.0"
imgui = "0.0.15"
backtrace = "0.3"
uuid = { version = "0.6", features = ["v4", "serde"] }
compact = { version = "0.2.5", features = ["serde-serialization"] }
compact_macros = "0.1.0"
kay = {version = "0.2.8", default-features = false, features = ["serde-serialization"] }
stdweb = {version = "0.4.7", optional = true}

[dependencies.descartes]
version = "0.1.4"
features = ["compact_containers", "serde-serialization"]

[dependencies.monet]
path = "./engine/monet/"
optional = true

[dependencies.stagemaster]
path = "./engine/stagemaster/"
optional = true

[dependencies.browser_monet]
path = "./engine/browser_monet/"
optional = true

[dependencies.browser_stagemaster]
path = "./engine/browser_stagemaster/"
optional = true

[build-dependencies]
kay_codegen = {version = "0.1.1", features = ["serde-serialization"]}

[features]
default = ["server"]
server = ["monet", "stagemaster", "kay/server"]
browser = ["browser_monet", "browser_stagemaster", "kay/browser", "stdweb"]