[package]
name = "citybound_common"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
license = "AGPL-3.0"
build = "./build.rs"

[dependencies]
ordered-float = "0.5.0"
itertools = "0.7.6"
rand = { version = "0.5", features = ["stdweb"] }
fnv = "1.0.5"
roaring = "0.5.2"
open = "1.2.1"
serde = "1.0"
serde_derive = "1.0"
backtrace = "0.3"
uuid = { version = "0.6", features = ["v4", "serde"] }
compact = { version = "0.2.13", features = ["serde-serialization"] }
compact_macros = "0.1.0"
kay = {version = "0.2.21", default-features = false, features = ["serde-serialization"] }
stdweb = {version = "0.4.7", optional = true}
descartes = {version = "0.1.12", features = ["compact_containers", "serde-serialization"]}
michelangelo = "0.1.3"

[build-dependencies]
kay_codegen = {version = "0.1.7", features = ["serde-serialization"]}

[features]
default = ["server"]
server = ["kay/server"]
browser = ["kay/browser", "stdweb"]