[package]
name = "compact"
version = "0.1.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]

[dependencies]
primal = "0.2.3"
lazy_static = "1.0.0"
clippy = { version = "0.0.186", optional = true }

[dependencies.allocators]
path = "../allocators/"

[features]
enable-clippy = [
	"clippy",
	"allocators/clippy"
]

