[package]
name = "kay"
version = "0.1.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]

[dependencies]
clippy = { version = "0.0.166", optional = true }
byteorder = "1"

[dependencies.compact]
path = "../compact/"

[dependencies.compact_macros]
path = "../compact_macros/"

[dependencies.chunked]
path = "../chunked/"

[features]
enable-clippy = [
	"clippy",
	"compact/enable-clippy",
	"chunked/enable-clippy"
]
