[package]
name = "kay"
version = "0.1.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]

[dependencies]
clippy = { version = "0.0.175", optional = true }
byteorder = "1"

[dependencies.compact]
path = "../compact/"

[dependencies.compact_macros]
path = "../compact_macros/"

[dependencies.chunky]
path = "../chunky/"

[features]
enable-clippy = [
	"clippy",
	"compact/enable-clippy",
	"chunky/enable-clippy"
]
