[package]
name = "monet"
version = "0.1.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
build = "src/build.rs"

[dependencies]
glium = "0.17.0"
clippy = { version = "0.0.175", optional = true }
fnv = "1.0.3"
itertools = "0.6.3"

[dependencies.kay]
path = "../kay"

[dependencies.compact]
path = "../compact"

[dependencies.compact_macros]
path = "../compact_macros"

[dependencies.descartes]
path = "../descartes"

[build-dependencies]
kay_codegen = {path = "../kay_codegen/"}

[features]
enable-clippy = [
	"clippy",
	"kay/enable-clippy",
	"compact/enable-clippy",
	"descartes/clippy"
]

