[package]
name = "monet2"
version = "0.1.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
build = "src/build.rs"

[dependencies]
glium = "0.17.0"
fnv = "1.0.3"
itertools = "0.7.6"
lyon_tessellation = "0.9.1"

[dependencies.kay]
path = "../kay"

[dependencies.compact]
path = "../compact"

[dependencies.compact_macros]
path = "../compact_macros"

[dependencies.descartes]
path = "../descartes"

[build-dependencies]
kay_codegen = {path = "../kay_codegen/"}

