[package]
name = "monet"
version = "0.1.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]

[dependencies]
glium = "*"
glium_text = "*"
clippy = "*"
fnv = "1.0.3"

[dependencies.kay]
path = "../kay"

[dependencies.kay_macros]
path = "../kay_macros"

[dependencies.descartes]
path = "../descartes"