[package]
name = "monet"
version = "0.1.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]

[dependencies]
glium = "0.15.0"
rusttype = "0.2.1"
unicode-normalization = "0.1.2"
clippy = "0.0.106"
fnv = "1.0.3"
lazy_static = "0.2.2"

[dependencies.kay]
path = "../kay"

[dependencies.kay_macros]
path = "../kay_macros"

[dependencies.descartes]
path = "../descartes"
