[package]
name = "stagemaster"
version = "0.1.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]

[dependencies]
imgui = "0.0.11"
imgui-sys = "0.0.11"
clippy = { version = "0.0.134", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
app_dirs = "1.1.1"

[dependencies.kay]
path = "../kay"

[dependencies.compact]
path = "../compact"

[dependencies.compact_macros]
path = "../compact_macros"

[dependencies.descartes]
path = "../descartes"

[dependencies.monet]
path = "../monet"

[features]
enable-clippy = [
	"clippy",
	"kay/enable-clippy",
	"compact/enable-clippy",
	"descartes/clippy",
	"monet/enable-clippy"
]

