[package]
name = "weaver"
version = "0.1.0"
authors = ["The Citybound Developers"]

[dependencies]
clippy = "0.0.106"
serde = "=0.8.21"
serde_derive = "=0.8.21"
toml = { version = "0.2.1", features = ["serde"], default-features = false }
semver = "0.5.1"
libloading = "0.3.1"

kay = { path = "../kay" }
