[package]
name = "browser_monet"
version = "0.1.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
build = "src/build.rs"

[dependencies]
fnv = "1.0.3"
itertools = "0.7.6"
lyon_tessellation = "0.9.1"
kay = {version = "0.2.10", default-features = false, features = ["browser"]}
compact = "0.2.4"
compact_macros = "0.1.0"
descartes = "0.1.4"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
kay_codegen = "0.1.1"