[package]
name = "browser_stagemaster"
version = "0.1.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
build = "./src/build.rs"

[dependencies]
kay = {version = "0.2.10", default-features = false, features = ["browser"]}
compact = "0.2.4"
compact_macros = "0.1.0"
serde = "1"
serde_derive = "1"

[dependencies.descartes]
version = "0.1.4"
features = ["compact_containers", "serde-serialization"]

[dependencies.browser_monet]
path = "../browser_monet"

[build-dependencies]
kay_codegen = "0.1.1"

