[package]
name = "stagemaster"
version = "0.1.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
build = "./src/build.rs"

[dependencies]
imgui = "0.0.15"
imgui-sys = "0.0.15"
imgui-glium-renderer = "0.0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
app_dirs = "1.2.1"
kay = {version = "0.2.11"}
compact = "0.2.4"
compact_macros = "0.1.0"

[dependencies.descartes]
version = "0.1.4"
features = ["compact_containers", "serde-serialization"]

[dependencies.monet]
path = "../monet"

[build-dependencies]
kay_codegen = "0.1.1"

